--- a/css/custom.css
+++ b/css/custom.css
@@ -105,8 +105,11 @@ h1.the-headline
   margin-top: 2rem;
 }
 
-
-
+/* background */
+body {
+  background-image: url("../images/pizza-bg.gif");
+  background-repeat: repeat;
+}
 
 /*
                                               _         
@@ -408,8 +411,8 @@ span.dot {
 
 iframe
 {
-  width: 90%;
-  height: 444px;
+  width: 100%;
+  height: 100%;
 }
 
 
@@ -432,4 +435,9 @@ div.corporate-motto-bg-2
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fc2407', endColorstr='#df5d42',GradientType=1 ); /* IE6-9 */
 }
 
-
+.center {
+  margin: auto;
+  width: 100%;
+  border: 3px solid #73AD21;
+  padding: 10px;
+}
